@@ -1,6 +1,7 @@
 Version 1.2.0 -- 25 July 2007
 -------------------------------------------------------------
 26 July 2007
++ Fixed multimedia table sql file
 + Added classify directory creation to update
 + Path for multimedia directory in update was wrong
 + Added boost directories for branch sites.
